Fixed text size on mobile

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -970,7 +970,7 @@ body {
                     font-size: 3em;
                 }
 
-                .text-2 {
+                .text-2, .text-3 {
                     font-size: 100%;
                     padding: 1rem;
                 }
